文档体系重组: README 营销化 + 技术内容独立成 CONFIGURATION.md
- README 改造为产品向导览 (中文名正式定名: 心灵札记): 定位叙事, 六大核心
  能力 (多模态入口/情绪天气/共情倾听/红色预警双通道+离线兜底/平台化可插拔/
  副医生预埋), 企业就绪细节, 技术基座与快速开始, 技术细节移交专项文档
- 新建 CONFIGURATION.md: 承接原 README 的配置与运维内容 (环境变量总表/
  --setup 向导/启动校验/自描述元数据/部署形态/ASR/Webhook/知识包/副医生/
  演示账号), 作为部署者单一权威参考
- Architecture.md: 标题补中文名, native 构建参数键描述同步本轮 native 攻坚
  产物, 部署节替换为指向 CONFIGURATION.md (防双源漂移)